Removing sensor from graph causes KSysGuard crash" (affected SensorType: DancingBars)

BugFix for "Bug 328807 - Removing sensor from graph causes KSysGuard
crash" (affected SensorType: DancingBars)

BUG: 328807

Two issues fixed:
- crash during removing a bar Sensor
- wrong Sensors is removed
- labels are not set as expected after removing a bar

REVIEW: 125416